add get all review endpoint

--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -4,7 +4,9 @@ FROM postgres:16-alpine
 RUN apk add --no-cache python3
 
 COPY pg-entrypoint.sh /usr/local/bin/pg-entrypoint.sh
-RUN chmod +x /usr/local/bin/pg-entrypoint.sh
+# On Windows, scripts can get CRLF line endings which break Linux shebang execution
+# with: "exec ...: no such file or directory". Normalize to LF and make executable.
+RUN sed -i 's/\r$//' /usr/local/bin/pg-entrypoint.sh && chmod +x /usr/local/bin/pg-entrypoint.sh
 
 ENTRYPOINT ["/usr/local/bin/pg-entrypoint.sh"]
 CMD ["postgres"]
